@@ -197,17 +197,44 @@ on ElementTree and Element, as known from the original ElementTree library.
 As an extension, these classes also provide an ``xpath()`` method that
 supports expressions in the complete XPath syntax.
 
-For ElementTree, the xpath method performs a global xpath query against the
-document (if absolute) or against the root node (if relative).
+For ElementTree, the xpath method performs a global XPath query against the
+document (if absolute) or against the root node (if relative)::
 
-When xpath is used on an element, the xpath expression is performed taking the
-element as the xpath context node.  Note that it is illegal to run an absolute
-XPath expression (like ``/a``) against an element.  The result is undefined.
+  >>> f = StringIO('<foo><bar></bar></foo>')
+  >>> tree = etree.parse(f)
 
-You call the xpath() method with the XPath expression to use.  Optionally, you
-can provide a second argument, which should be a dictionary mapping the
-namespace prefixes used in the XPath expression to namespace URIs.  The
-optional third argument is used to define `extension functions`_.
+  >>> r = tree.xpath('/foo/bar')
+  >>> len(r)
+  1
+  >>> r[0].tag
+  'bar'
+
+  >>> r = tree.xpath('bar')
+  >>> r[0].tag
+  'bar'
+
+When ``xpath()`` is used on an element, the XPath expression is evaluated
+against the element (if relative) or against the root tree (if absolute)::
+
+  >>> root = tree.getroot()
+  >>> r = root.xpath('bar')
+  >>> r[0].tag
+  'bar'
+
+  >>> bar = root[0]
+  >>> r = bar.xpath('/foo/bar')
+  >>> r[0].tag
+  'bar'
+
+  >>> tree = bar.getroottree()
+  >>> r = tree.xpath('/foo/bar')
+  >>> r[0].tag
+  'bar'
+
+Optionally, you can provide a ``namespaces`` keyword argument, which should be
+a dictionary mapping the namespace prefixes used in the XPath expression to
+namespace URIs.  The optional ``extensions`` argument is used to define
+`extension functions`_ in Python.
 
 .. _`extension functions`: extensions.html
 
